name:             hspec-experimental
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Laws
  build-depends:
      base, hspec-shouldbe, QuickCheck

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base, hspec-shouldbe, hspec-discover, hspec-experimental, QuickCheck
